[package]
name = "rust-tokio-demo"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.7"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.9", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
httpdate = "1.0"
once_cell = "1.5.2"
rand = "0.8.3"

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"